# ecoruta

./: .env.example  .gitignore  AGENTS.md  EcoRuta_Design_System.md  EcoRuta_Features.html  LICENSE  PLAN_ESTADO.md  README.md  docker-compose.yml
apps/admin/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo
apps/admin/src/: App.tsx  AppErrorBoundary.tsx  styles.css
apps/admin/src/components/: HeatmapList.tsx  MapaHeatmap.tsx  MetricCard.tsx
apps/admin/src/components/admin/: AdminNavList.tsx  (+8 more)
apps/admin/src/core/: api.ts
apps/admin/src/data/: adminDemoData.ts
apps/admin/src/design-system/: index.ts
apps/admin/src/layouts/: AdminLayout.tsx
apps/admin/src/pages/: DashboardPage.tsx
apps/mobile/: .env.example  App.tsx  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/mobile/src/components/: EcoLogo.tsx
apps/mobile/src/config/: env.ts
apps/mobile/src/design-system/: DesignSystemScreen.tsx  fonts.ts  index.ts
apps/mobile/src/theme/: paperTheme.ts  tokens.ts
backend/: .dockerignore  Dockerfile  ORS_INTEGRATION.md  config.py  db.py  main.py  pyproject.toml  requirements.txt
backend/api/: dependencies.py  router.py  schemas.py
backend/api/routes/: ciudadano.py  estadisticas.py  reportes.py  rutas.py  solicitudes.py
backend/services/: carbon.py  ors.py  routing.py  routing_advanced.py  store.py  telegram.py
backend/tests/: conftest.py  test_api.py  test_ors_integration.py  test_services.py
backend/workers/: telegram.py
(+65 files in other folders)
