[project]
name = "ecoruta-backend"
version = "0.1.0"
description = "EcoRuta backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "psycopg[binary]==3.2.9",
    "sqlalchemy==2.0.40",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]

[tool.uv]
package = false
